--- a/src/app/(pages)/login/LoginForm/index.module.scss
+++ b/src/app/(pages)/login/LoginForm/index.module.scss
@@ -6,15 +6,21 @@
   flex-direction: column;
   gap: calc(var(--base) / 2);
   align-items: flex-start;
-  width: 66.66%;
-
-  @include mid-break {
-    width: 100%;
-  }
+  width: 100%;
+  gap: 24px;
+  margin-top: 30px;
 }
 
 .submit {
   margin-top: calc(var(--base) / 2);
+  width: 100%;
+}
+
+.links{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .message {
