--- a/src/app/(pages)/order-confirmation/OrderConfirmationPage/index.module.scss
+++ b/src/app/(pages)/order-confirmation/OrderConfirmationPage/index.module.scss
@@ -3,5 +3,9 @@
 .actions {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 30px;
   gap: calc(var(--base) / 2);
 }
+
+
